--- a/salt/map.jinja
+++ b/salt/map.jinja
@@ -8,19 +8,19 @@
 {%-     for k,v in b.items() %}
 {%-         if v is string or v is number %}
 {%-             do a.update({ k: v }) %}
-{%-         elif 'dict' not in v.__class__.__name__ %}
+{%-         elif v is not mapping %}
 {%-             if a[k] is not defined %}
 {%-                 do a.update({ k: v }) %}
-{%-             elif a[k] is iterable and 'dict' not in a[k].__class__.__name__ and
+{%-             elif a[k] is iterable and a[k] is not mapping and
                 a[k] is not string %}
 {%-                 do a.update({ k: v|list + a[k]|list}) %}
 {%-             else %}
 {%-                 do a.update({ k: v }) %}
 {%-             endif %}
-{%-         elif 'dict' in v.__class__.__name__ %}
+{%-         elif v is mapping %}
 {%-             if a[k] is not defined %}
 {%-                 do a.update({ k: v }) %}
-{%-             elif 'dict' in a[k].__class__.__name__ %}
+{%-             elif a[k] is mapping %}
 {%-                 do a.update({ k: v }) %}
 {%-             else %}
 {%-                 do deep_merge(a[k], v) %}
